<resources>
    <string name="app_name">M-Voting Bilik</string>
    <string name="nama">Nama</string>
    <string name="about">H-Voting App</string>
    <string name="adalah">adalah aplikasi pengambilan suara pemilihan Ketua Himpunan Mahasiswa Teknik Informatika dengan menggunakan perangkat Android</string>
    <string name="ayo">Ayooo !!!!</string>
    <string name="berikan">Berikan Suara Anda Demi Kemajuan HUMANIKA</string>
    <string name="satu_asa">Satu Asa Satu Jiwa Satu Semangat</string>
    <string name="informatika">INFORMATIKA</string>
    <string name="back">Back</string>
    <string name="salam_informatika">Salam Informatika</string>
    <string name="todo">TODO</string>
    <string name="result_vote">Result Vote</string>
    <string name="hasil_perolehan_suara">Hasil perolehan suara</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="no_urut">No Urut</string>
    <string name="angkatan">Angkatan</string>
    <string name="visi">Visi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="jumlah_suara">Jumlah Suara</string>
    <string name="misi">Misi</string>
    <string name="suara">Suara</string>
    <string name="not_vote">Not Vote</string>
    <string name="candidate">Candidate</string>
    <string name="_1">:</string>
    <string name="see_more">See More</string>
    <string name="textview">TextView</string>
    <string name="mohon_maaf">Mohon Maaf…</string>
    <string name="hasil_pengumuman">Pengumuman hasil perolehan suara tidak dapat ditampilkan!</string>
    <string name="tanggal_pengumunan">Tanggal Pengumunan</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="ok">OK</string>
    <string name="voter">Voter</string>
    <string name="vote">Vote</string>
    <string name="siapkan_qr_code_anda">Siapkan QR Code Anda</string>
    <string name="persen">%</string>

</resources>
