<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    tools:context="com.fend.mvotingbilik.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                app:srcCompat="@drawable/hasil"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/about"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adalah"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginTop="30dp"
                android:text="@string/ayo"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/berikan"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/salam_informatika"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/satu_asa"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informatika"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:text="@string/back"
                android:textColor="@color/backgroundcolor"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
