<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="5dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_upload"
                    android:layout_width="87dp"
                    android:layout_height="104dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/no_urut"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:text="@string/_1" />

                        <TextView
                            android:id="@+id/no_urut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/textview"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="16dp"
                            tools:layout_editor_absoluteY="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/nama"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:text="@string/_1" />

                        <TextView
                            android:id="@+id/namacalon"
                            android:text="@string/textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="16dp"
                            tools:layout_editor_absoluteY="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="3"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/see_more"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>